--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="convert_string">Convert</string>
     <string name="dollars_hint">dollars</string>
     <string name="no_value_string">No Value</string>
+    <string name="about_string">About</string>
 </resources>
