--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="link_collector">Link Collector</string>
+    <string name="locator">Locator</string>
+    <string name="show_location">Show Location</string>
 </resources>
